projects added as a modules