@@ -1,7 +1,8 @@
 <?xml version="1.0" encoding="UTF-8"?>
-<project xmlns="http://maven.apache.org/POM/4.0.0"
-         xmlns:xsi="http://www.w3.org/2001/XMLSchema-instance"
+<project xmlns:xsi="http://www.w3.org/2001/XMLSchema-instance"
+         xmlns="http://maven.apache.org/POM/4.0.0"
          xsi:schemaLocation="http://maven.apache.org/POM/4.0.0 http://maven.apache.org/xsd/maven-4.0.0.xsd">
+
   <modelVersion>4.0.0</modelVersion>
 
   <!-- Project Object Model -->
@@ -11,6 +12,8 @@
   <groupId>ru.otus</groupId>
   <artifactId>OtusJavaHW</artifactId>
   <version>${revision}</version>
+
+  <packaging>pom</packaging>
 
   <description>Code examples</description>
 
@@ -27,7 +30,11 @@
     <module>L01-maven</module>
     <module>L02-shade</module>
     <module>L03-generics-collections</module>
+    <module>L04-collections</module>
+    <module>L05-qa</module>
     <module>L06-gc</module>
+    <module>L07-remoteDebug</module>
+    <module>L08-byteCodes</module>
     <module>L09-annotations</module>
     <module>L10-java8</module>
   </modules>
@@ -44,29 +51,36 @@
 
     <!--region BOMs -->
     <spring-boot.version>2.2.4.RELEASE</spring-boot.version>
+    <!--<spring-framework-bom.version>5.2.2.RELEASE</spring-framework-bom.version>-->
     <!--endregion-->
 
     <!--region Libs -->
     <com.google.guava.version>28.2-jre</com.google.guava.version>
-    <spring-framework-bom.version>5.2.2.RELEASE</spring-framework-bom.version>
     <commons-io.version>2.6</commons-io.version>
     <lombok.version>1.18.12</lombok.version>
     <vavr.version>1.0.0-alpha-3</vavr.version>
+    <jmh-core.version>1.23</jmh-core.version>
+    <jol-core.version>0.10</jol-core.version>
+    <asm.version>7.3.1</asm.version>
 
     <checker.version>3.1.1</checker.version>
     <annotations.version>18.0.0</annotations.version>
     <jcip-annotations.version>1.0</jcip-annotations.version>
-    <spotbugs.version>4.0.0-RC1</spotbugs.version>
+    <spotbugs.version>4.0.0-RC3</spotbugs.version>
     <error_prone_annotations.version>2.3.4</error_prone_annotations.version>
     <!--endregion-->
 
     <!--region Plugins-->
+    <maven-compiler-plugin.version>3.8.1</maven-compiler-plugin.version>
     <maven.compiler.release>${java.version}</maven.compiler.release>
     <maven.compiler.parameters>true</maven.compiler.parameters>
+    <maven.compiler.forceJavacCompilerUse>true</maven.compiler.forceJavacCompilerUse>
 
-    <maven-enforcer-plugin.version>3.0.0-M2</maven-enforcer-plugin.version>
+    <maven-surefire-plugin.version>3.0.0-M3</maven-surefire-plugin.version>
+    <maven-enforcer-plugin.version>3.0.0-M3</maven-enforcer-plugin.version>
     <maven-shade-plugin.version>3.2.1</maven-shade-plugin.version>
     <maven-assembly-plugin.version>3.2.0</maven-assembly-plugin.version>
+    <maven-enforcer-plugin.version>3.0.0-M3</maven-enforcer-plugin.version>
 
     <lombok-maven-plugin.version>1.18.10.0</lombok-maven-plugin.version>
     <lombok.verbose>true</lombok.verbose>
@@ -87,6 +101,7 @@
         <type>pom</type>
         <scope>import</scope>
       </dependency>
+
       <dependency>
         <groupId>com.google.guava</groupId>
         <artifactId>guava</artifactId>
@@ -97,7 +112,17 @@
         <artifactId>commons-io</artifactId>
         <version>${commons-io.version}</version>
       </dependency>
-
+      <dependency>
+        <groupId>org.openjdk.jmh</groupId>
+        <artifactId>jmh-generator-annprocess</artifactId>
+        <version>${jmh-core.version}</version>
+        <scope>test</scope>
+      </dependency>
+      <dependency>
+        <groupId>org.openjdk.jol</groupId>
+        <artifactId>jol-core</artifactId>
+        <version>${jol-core.version}</version>
+      </dependency>
       <dependency>
         <groupId>io.vavr</groupId>
         <artifactId>vavr</artifactId>
@@ -109,6 +134,11 @@
         <version>${lombok.version}</version>
         <scope>provided</scope>
         <optional>true</optional>
+      </dependency>
+      <dependency>
+        <groupId>org.ow2.asm</groupId>
+        <artifactId>asm-commons</artifactId>
+        <version>${asm.version}</version>
       </dependency>
 
       <!--region Common Annotations (CheckerFramework, JetBrains, SpotBugs, ErrorProne) -->
@@ -149,36 +179,52 @@
 
   <dependencies>
 
-      <!--region Test dependencies - JUnit Jupiter, AssertJ, Hamcrest, Mockito -->
-      <dependency>
-        <groupId>org.junit.jupiter</groupId>
-        <artifactId>junit-jupiter-params</artifactId>
-      </dependency>
-      <dependency>
-        <groupId>org.assertj</groupId>
-        <artifactId>assertj-core</artifactId>
-        <scope>test</scope>
-      </dependency>
-      <dependency>
-        <groupId>org.mockito</groupId>
-        <artifactId>mockito-junit-jupiter</artifactId>
-        <scope>test</scope>
-      </dependency>
-      <dependency>
-        <groupId>org.junit.jupiter</groupId>
-        <artifactId>junit-jupiter-engine</artifactId>
-      </dependency>
-      <!--endregion-->
+    <!--region Test dependencies - JUnit Jupiter, AssertJ, Hamcrest, Mockito -->
+    <dependency>
+      <groupId>org.junit.jupiter</groupId>
+      <artifactId>junit-jupiter-params</artifactId>
+    </dependency>
+    <dependency>
+      <groupId>org.assertj</groupId>
+      <artifactId>assertj-core</artifactId>
+      <scope>test</scope>
+    </dependency>
+    <dependency>
+      <groupId>org.mockito</groupId>
+      <artifactId>mockito-junit-jupiter</artifactId>
+      <scope>test</scope>
+    </dependency>
+    <dependency>
+      <groupId>org.junit.jupiter</groupId>
+      <artifactId>junit-jupiter-engine</artifactId>
+    </dependency>
+    <!--endregion-->
 
   </dependencies>
-
-  <packaging>pom</packaging>
 
   <build>
 
     <pluginManagement>
       <plugins>
 
+        <plugin>
+          <artifactId>maven-compiler-plugin</artifactId>
+          <version>${maven-compiler-plugin.version}</version>
+          <configuration>
+            <compilerArgs>
+              <arg>-parameters</arg>
+              <arg>--enable-preview</arg>
+              <!--<arg>-Xlint:preview</arg>-->
+            </compilerArgs>
+          </configuration>
+        </plugin>
+        <plugin>
+          <artifactId>maven-surefire-plugin</artifactId>
+          <version>${maven-surefire-plugin.version}</version>
+          <configuration>
+            <argLine>--enable-preview</argLine>
+          </configuration>
+        </plugin>
         <plugin>
           <artifactId>maven-enforcer-plugin</artifactId>
           <version>${maven-enforcer-plugin.version}</version>
@@ -237,6 +283,14 @@
 
       </plugins>
     </pluginManagement>
+
+    <plugins>
+
+      <plugin>
+        <artifactId>maven-enforcer-plugin</artifactId>
+      </plugin>
+
+    </plugins>
 
   </build>
 
